# veteran_plus

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  local_setup.sh  pyproject.toml
.github/workflows/: default.yaml
resources/: links.txt
src/: app.py
src/commands/: load_data.py
src/common/: enums.py
src/llm/: __init__.py  constants.py  embedders.py
src/settings/: base.py  logging.py
src/stores/: __init__.py  base.py  chromadb.py
src/trainers/: web.py
