[tool.poetry]
name = "veteran+"
version = "0.1.0"
description = "Veteran+ is the project aimed to provide comprehensive assistance to Ukrainian war veterans."
authors = ["giX <viacheslavlab@gmail.com>"]
repository = "https://github.com/gixproject/veteran_plus"
readme = "README.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
langchain = "^0.3.3"
langchain-community = "^0.3.2"
boto3 = "^1.35.37"
langchain-aws = "^0.2.2"
chromadb = "^0.5.12"
streamlit = "^1.39.0"
typer = "^0.15.1"
langchain-chroma = "^0.1.4"
pydantic = {extras = ["email"], version = "^2.10.3"}
sqlalchemy = "^2.0.36"
watchdog = "^6.0.0"
beautifulsoup4 = "^4.12.3"
html2text = "^2024.2.26"
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
ruff = "^0.8.2"
mypy = "^1.13.0"

[tool.mypy]
strict = false
ignore_missing_imports = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
allow_untyped_calls = true

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    "B",
    "E",
    "F",
    "ISC",
    "UP",
]

fixable = ["ALL"]
unfixable = []
ignore = ["ISC001"]

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "E225", "E231"]
